wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-clusterissuer
  namespace: default
spec:
  tls:
    - hosts:
        - a9af193cdc5e6413bba9a8d59a22ea0d-1193761687.us-east-1.elb.amazonaws.com
      secretName: wordpress-tls
  rules:
    - host: a9af193cdc5e6413bba9a8d59a22ea0d-1193761687.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
